--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+.idea
+
 /PQ_integretion_testing/
 /PQ_integretion_testing/testing/
 !/PQ_integretion_testing/
